--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             $('#souris').click(function(){
                 $('#instru').toggle();
                 $('#myCanvas').toggle();
-                $('#cv').hide();
+                cv = false;
+                game();
+
             });
         });
         
